--- a/toots.html
+++ b/toots.html
@@ -2,7 +2,9 @@
 <html>
 <head>
 	<title>Toots JS</title>
+	<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 	<meta charset="utf-8">
+	<link rel="stylesheet" type="text/css" href="toots.css">
 	<link rel="apple-touch-icon" sizes="57x57" href="../statics/apple-icon-57x57.png">
 	<link rel="apple-touch-icon" sizes="60x60" href="../statics/apple-icon-60x60.png">
 	<link rel="apple-touch-icon" sizes="72x72" href="../statics/apple-icon-72x72.png">
@@ -12,18 +14,20 @@
 	<link rel="apple-touch-icon" sizes="144x144" href="../statics/apple-icon-144x144.png">
 	<link rel="apple-touch-icon" sizes="152x152" href="../statics/apple-icon-152x152.png">
 	<link rel="apple-touch-icon" sizes="180x180" href="../statics/apple-icon-180x180.png">
-	<link rel="icon" type="image/png" sizes="192x192"  href="../statics/android-icon-192x192.png">
-	<link rel="icon" type="image/png" sizes="32x32" href="../statics/favicon-32x32.png">
-	<link rel="icon" type="image/png" sizes="96x96" href="../statics/favicon-96x96.png">
-	<link rel="icon" type="image/png" sizes="16x16" href="../statics/favicon-16x16.png">
+<!-- 	<link rel="icon" type="image/png" sizes="192x192"  href="../statics/android-icon-192x192.png"> -->
+<!-- 	<link rel="icon" type="image/png" sizes="32x32" href="../statics/favicon-32x32.png"> -->
+<!-- 	<link rel="icon" type="image/png" sizes="96x96" href="../statics/favicon-96x96.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="../statics/favicon-16x16.png"> -->
 	<link rel="manifest" href="../statics/manifest.json">
 	<meta name="msapplication-TileColor" content="#ffffff">
 	<meta name="msapplication-TileImage" content="../statics/ms-icon-144x144.png">
 	<meta name="theme-color" content="#ffffff">
 </head>
 <body>
-	<div id="container_1">
-		
-	</div>
+	<div id="container_1" class="container"></div>
+	<div id="container_2" class="container"></div>
+	<div id="container_3" class="container"></div>
+
+	<script type="text/javascript" src="toots.js"></script>
 </body>
 </html>
